fix image stretch problem and edit main page amiibo text

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,6 @@ html {
   padding: 0;
 }
 
-h1, h2, h3, p {
-  text-align: center;
-}
-
 .main-section {
   width: 70%;
   margin: 0 auto;
@@ -57,6 +53,13 @@ h1, h2, h3, p {
   border: 3px solid transparent;
 }
 
+.amiibo-tile h3 {
+  text-align: center;
+  font-size: 1.35rem;
+}
+
+
+
 .amiibo-tile a {
   text-decoration: none;
   color: black;
@@ -66,6 +69,7 @@ h1, h2, h3, p {
   transition: border 0.55s;
   border: 3px solid #d0d0d0;
 }
+
 .amiibo-tile:active {
   margin-top: 0rem;
 }
@@ -81,9 +85,9 @@ h1, h2, h3, p {
   margin-bottom: 0.25rem;
 }
 
-.amiibo-tile div {
+/* .amiibo-tile div {
   text-align: center;
-}
+} */
 
 /* Single Amiibo Page */
 
@@ -99,6 +103,7 @@ h1, h2, h3, p {
 
 .single-amiibo-image {
   padding: 2rem 0;
+  object-fit: contain;
 }
 
 .single-amiibo-info {
@@ -147,4 +152,5 @@ h1, h2, h3, p {
 
 .info-style {
   color: #36454f;
+  font-weight: bold;
 }
